<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_citas"
        android:icon="@drawable/ic_query_builder"
        android:title="@string/title_citas" />

    <item
        android:id="@+id/navigation_servicios"
        android:icon="@drawable/ic_local_hospital"
        android:title="@string/title_servicios" />

    <item
        android:id="@+id/navigation_campana"
        android:icon="@drawable/ic_local_offer"
        android:title="@string/title_campana" />

    <item
        android:id="@+id/navigation_contactanos"
        android:icon="@drawable/ic_place"
        android:title="@string/title_contactar"
        />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_person_pin"
        android:title="@string/title_perfil"
        />

</menu>
