<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgServicio"
                    android:layout_width="121dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.13"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtNombreServicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="7dp"
                        android:paddingTop="15dp"
                        android:text="@string/titulo_servicios"
                        android:textSize="25dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtSedeServicioDF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="7dp"
                        android:paddingTop="8dp"
                        android:text="@string/sede_servicios"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/txtSedeServicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="7dp"
                        android:paddingTop="8dp"
                        android:text="@string/dias_servicios"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/txtMasInfoDF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="7dp"
                        android:paddingTop="8dp"
                        android:text="@string/mas_informacion"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>